--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   ],
     "devDependencies": {
       "handlebars": "1.0.10",
-      "uglify-js": "1.3.4"
+      "uglify-js": "1.3.4",
+      "jshint": "1.1.0"
   }
 }
