--- a/package.json
+++ b/package.json
@@ -5,19 +5,22 @@
   "keywords": ["comic", "book", "reader"],
   "homepage": "http://reader.justforcomics.com",
   "author": "Bala Clark",
+  "scripts": { "test": "make test" },
   "repository": {
     "type": "git",
     "url": "https://github.com/balaclark/HTML5-Comic-Book-Reader.git"
   },
   "licenses": [
-  {
-    "type": "Apache-2.0",
-    "url": "http://www.apache.org/licenses/LICENSE-2.0"
-  }
+    {
+      "type": "Apache-2.0",
+      "url": "http://www.apache.org/licenses/LICENSE-2.0"
+    }
   ],
-    "devDependencies": {
-      "handlebars": "1.0.10",
-      "uglify-js": "1.3.4",
-      "jshint": "1.1.0"
+  "devDependencies": {
+    "handlebars": "1.0.10",
+    "uglify-js": "1.3.4",
+    "jshint": "1.1.0",
+    "connect": "2.7.8",
+    "phantomjs": "1.9.0-3"
   }
 }
