--- a/package.json
+++ b/package.json
@@ -2,10 +2,17 @@
   "name": "comic-reader",
   "description": "A HTML5 comic book reader.",
   "version": "0.5.0",
-  "keywords": ["comic", "book", "reader"],
+  "keywords": [
+    "book",
+    "comic",
+    "reader"
+  ],
   "homepage": "http://reader.justforcomics.com",
-  "author": "Bala Clark",
-  "scripts": { "test": "make test" },
+  "author": "Bala Clark <balaclark@gmail.com>",
+  "scripts": {
+    "pretest": "standard lib/ComicBook.js",
+    "test": "make test"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/balaclark/HTML5-Comic-Book-Reader.git"
@@ -18,9 +25,8 @@
   ],
   "devDependencies": {
     "handlebars": "1.0.10",
-    "uglify-js": "1.3.4",
-    "jshint": "1.1.0",
-    "connect": "2.7.8",
-    "phantomjs": "1.9.0-3"
+    "mocha": "^2.2.5",
+    "standard": "^4.5.3",
+    "uglify-js": "1.3.4"
   }
 }
