--- a/package.json
+++ b/package.json
@@ -24,9 +24,10 @@
     }
   ],
   "devDependencies": {
-    "handlebars": "1.0.10",
+    "cssmin": "^0.4.3",
+    "handlebars": "^1.0.10",
     "mocha": "^2.2.5",
     "standard": "^4.5.3",
-    "uglify-js": "1.3.4"
+    "uglify-js": "^2.4.23"
   }
 }
