--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     }
   ],
   "devDependencies": {
+    "babelify": "^6.1.3",
+    "browserify": "^10.2.6",
+    "browserify-handlebars": "^1.0.0",
     "cssmin": "^0.4.3",
-    "handlebars": "^1.0.10",
     "mocha": "^2.2.5",
     "standard": "^4.5.3",
     "uglify-js": "^2.4.23"
