--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   "homepage": "http://reader.justforcomics.com",
   "author": "Bala Clark <balaclark@gmail.com>",
   "scripts": {
-    "pretest": "standard lib/ComicBook.js",
-    "test": "make test"
+    "build": "npm run build",
+    "buildjs": "rm -f dist/*.js && browserify --transform babelify --transform browserify-handlebars app/index.js --debug | exorcist dist/comicbook.js.map > dist/comicbook.js",
+    "test": "standard"
   },
   "repository": {
     "type": "git",
@@ -23,11 +24,21 @@
       "url": "http://www.apache.org/licenses/LICENSE-2.0"
     }
   ],
+  "standard": {
+    "parser": "babel-eslint",
+    "ignore": [
+      "dist",
+      "assets"
+    ]
+  },
   "devDependencies": {
+    "babel-eslint": "^3.1.23",
     "babelify": "^6.1.3",
     "browserify": "^10.2.6",
     "browserify-handlebars": "^1.0.0",
     "cssmin": "^0.4.3",
+    "exorcist": "^0.4.0",
+    "handlebars": "^3.0.3",
     "mocha": "^2.2.5",
     "standard": "^4.5.3",
     "uglify-js": "^2.4.23"
