--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "scripts": {
     "build": "npm run build",
     "buildjs": "rm -f dist/*.js && browserify --transform babelify --transform browserify-handlebars app/index.js --debug | exorcist dist/comicbook.js.map > dist/comicbook.js",
-    "test": "standard"
+    "pretest": "standard",
+    "test": "mocha-phantomjs test/index.html"
   },
   "repository": {
     "type": "git",
@@ -25,21 +26,28 @@
     }
   ],
   "standard": {
-    "parser": "babel-eslint",
     "ignore": [
-      "dist",
-      "assets"
-    ]
+      "assets",
+      "dist"
+    ],
+    "global": [
+      "describe",
+      "it"
+    ],
+    "parser": "babel-eslint"
   },
   "devDependencies": {
     "babel-eslint": "^3.1.23",
     "babelify": "^6.1.3",
     "browserify": "^10.2.6",
     "browserify-handlebars": "^1.0.0",
+    "chai": "^3.0.0",
     "cssmin": "^0.4.3",
     "exorcist": "^0.4.0",
     "handlebars": "^3.0.3",
     "mocha": "^2.2.5",
+    "mocha-phantomjs": "^3.5.3",
+    "phantomjs": "^1.9.17",
     "standard": "^4.5.3",
     "uglify-js": "^2.4.23"
   }
