--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "imagediff": "^1.0.8",
     "mochify": "^2.10.0",
     "phantomjs": "^1.9.17",
+    "spy": "^0.1.3",
     "standard": "^4.5.3",
     "uglify-js": "^2.4.23",
     "watchify": "http://registry.npmjs.org/watchify/-/watchify-3.2.3.tgz"
