re-draw comic when page is resized

--- a/package.json
+++ b/package.json
@@ -61,5 +61,7 @@
     "uglify-js": "^2.4.23",
     "watchify": "http://registry.npmjs.org/watchify/-/watchify-3.2.3.tgz"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lodash.debounce": "^3.1.1"
+  }
 }
