--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "buildjs": "rm -f dist/*.js && browserify --transform [ babelify --optional runtime ] --transform browserify-handlebars  app/index.js --debug | exorcist dist/comicbook.js.map > dist/comicbook.js && uglifyjs --screw-ie8 --compress --mangle --source-map dist/comicbook.min.js.map --source-map-root ./ --output dist/comicbook.min.js -- dist/comicbook.js",
     "pretest": "standard",
     "test": "mochify --recursive --reporter spec --transform [ babelify --optional runtime ] --transform browserify-handlebars",
-    "test-watch": "mochify --watch --recursive --reporter min --transform [ babelify --optional runtime ] --transform browserify-handlebars",
-    "wrap": "rm -f npm-shrinkwrap ; npm prune && npm shrinkwrap"
+    "test-watch": "mochify --watch --recursive --reporter min --transform [ babelify --optional runtime ] --transform browserify-handlebars"
   },
   "repository": {
     "type": "git",
